# KalshiBot

./: .gitignore  README.md
.github/workflows/: ci.yml
kalshi_weather_model/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
kalshi_weather_model/config/: station_city_map.json
kalshi_weather_model/ops/: run_dashboard.sh  run_scheduler.sh
kalshi_weather_model/ops/launchd/: com.ericjellerson.kalshi-weather.dashboard.plist  com.ericjellerson.kalshi-weather.scheduler.plist  com.kalshi-weather.dashboard.plist  com.kalshi-weather.scheduler.plist  install_launchd.sh  uninstall_launchd.sh
kalshi_weather_model/tests/: test_contract_discovery.py  test_dashboard_charts.py  test_dashboard_security.py  test_exit_ev_sign.py  test_fair_value.py  test_fees.py  test_gates_and_lifecycle.py  test_io_utils.py  test_kalshi_orderbook_parser.py  test_kalshi_signing.py  test_live_cycle_artifact_routing.py  test_live_cycle_routing.py  test_live_engine_exits.py  test_live_equity_sync.py  test_live_routing_toggle.py  test_live_settlement_state.py  test_metrics.py  test_monitoring_alerts.py  test_paper_engine.py  test_risk_limits.py  test_strategy_runtime.py  test_thresholds.py  test_training_pipeline_cli.py
kalshi_weather_model/weather_arb/: __main__.py  config.py  fees.py  types.py
kalshi_weather_model/weather_arb/analytics/: monitoring.py
kalshi_weather_model/weather_arb/connectors/: kalshi.py  noaa.py
kalshi_weather_model/weather_arb/dashboard/: app.py
kalshi_weather_model/weather_arb/eval/: backtest_gate.py  train_gate.py  wf_gate.py
(+20 files in other folders)
